<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mp3"
    tools:context=".activities.Maps">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_around"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/button4"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btncircular"
        android:drawableStart="@drawable/ic_search"
        android:ems="10"
        android:hint="@string/places_around"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btncircular"
        android:text="@string/hotels_nearby"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/btncircular"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/hotels_nearby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button1"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btncircular"
        android:text="@string/restraunts_nearby"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btncircular"
        android:text="@string/airport_nearby"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btncircular"
        android:text="@string/hospitals_nearby"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btncircular"
        android:text="@string/places_to_visit_nearby"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="109dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btnshaping"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>